# Wanderers

./: .gitignore  CMakeLists.txt  D3D9Client.cfg  LICENSE  README.compile  README.md  SpaceXpanse.cfg  keymap.cfg
Doc/: CMakeLists.txt  Credit.htm  Credit.md  Credit.odt  PlanetTextures.odt  PlanetTextures.txt  SpaceXpanse.txt  SpaceXpanseConfig.md
Doc/Technotes/: CMakeLists.txt  RecorderRef.odt  RecorderRef.txt
Doc/Technotes/composite/: CMakeLists.txt  composite.tex
Doc/Technotes/distmass/: CMakeLists.txt  distmass.tex
Doc/Technotes/dynamics/: CMakeLists.txt  dynamics.tex
Doc/Technotes/dynsurf/: CMakeLists.txt  dynsurf.tex
Doc/Technotes/earth_atm/: CMakeLists.txt  corr_effect.eps  dens_j71g.eps  dens_j77.eps  dens_relerr.eps  dens_relerr2.eps  earth_atm.tex  j71g_nrlmsise00_cmp1.eps  j71g_nrlmsise00_cmp2.eps  j71g_nrlmsise00_cmp3.eps  jacchia_temp.eps  legacy_dns.eps  legacy_prs.eps  legacy_temp.eps  molmass.eps  molmass_err.eps  molw.eps  ob_j71g_dens.eps  ob_j71g_prs.eps  ob_j71g_temp.eps  prs_j71g.eps  prs_j77.eps  prs_relerr2.eps  tinf_annual.eps  tinf_daily.eps
Doc/Technotes/gravity/: CMakeLists.txt  gravity.tex
Doc/Technotes/lighting/: CMakeLists.txt  lighting.tex
Doc/Technotes/precession/: CMakeLists.txt  fig1.eps  fig2.eps  fig3a.eps  fig3b.eps  precession.tex
Html/Main/OrbitPrimer/: CMakeLists.txt  Gravity.htm  Gravity2.htm  Kepler.htm  OrbitPrimer.hhp  OrbitPrimer.htm
OVP/GDIClient/: CMakeLists.txt  GDIClient.cpp  GDIClient.h
Sound/XRSound/: CMakeLists.txt  README.md  makedist_x64.bat  makedist_x86.bat
Sound/XRSound/XRSound-lib-linktest/: README.md  XRSound-lib-linktest.sln
SpaceXpansesdk/: CMakeLists.txt
SpaceXpansesdk/doc/: 3DModel.odt  3DModel.txt  API_Guide.doc  API_Guide.odt  API_Guide.txt  CMakeLists.txt
SpaceXpansesdk/doxygen/: CMakeLists.txt  Doxyfile.in
SpaceXpansesdk/doxygen/API_reference/: graphics.h  mainpage.h  module.h  orbit.h  particle.h  vessel.h
SpaceXpansesdk/doxygen/examples/: clbkLoadStateEx.cpp
SpaceXpansesdk/include/: CamAPI.h  CelBodyAPI.h  DrawAPI.h  GraphicsAPI.h  MFDAPI.h  ModuleAPI.h  SpaceXpanseAPI.h  SpaceXpansesdk.h  VesselAPI.h
SpaceXpansesdk/samples/: CMakeLists.txt
SpaceXpansesdk/samples/AscentMFD/: AscentMFD.cpp  CMakeLists.txt
SpaceXpansesdk/samples/DialogTemplate/: CMakeLists.txt  DialogTemplate.cpp  DialogTemplate.rc
SpaceXpansesdk/samples/LaunchpadParamTemplate/: CMakeLists.txt  LParam.cpp  LParam.rc
SpaceXpansesdk/samples/MFDTemplate/: CMakeLists.txt  MFDTemplate.cpp  MFDTemplate.h
Src/: CMakeLists.txt
Src/Celbody/Ariel/: CMakeLists.txt
Src/Celbody/Deimos/: CMakeLists.txt
Src/Celbody/Galsat/: CMakeLists.txt  Galsat.cpp  Galsat.h
Src/Celbody/Miranda/: CMakeLists.txt
Src/Celbody/Moon/: CMakeLists.txt  ELP82.cpp  Moon.cpp
Src/Celbody/Nereid/: CMakeLists.txt
Src/Celbody/Oberon/: CMakeLists.txt
Src/Celbody/Phobos/: CMakeLists.txt
Src/Celbody/Proteus/: CMakeLists.txt
Src/Celbody/Satsat/: CMakeLists.txt  Satsat.cpp  Satsat.h
Src/Celbody/Sol/: CMakeLists.txt
Src/Celbody/Titania/: CMakeLists.txt
Src/Celbody/Triton/: CMakeLists.txt
Src/Celbody/Umbriel/: CMakeLists.txt
Src/Celbody/Vesta/: CMakeLists.txt
Src/Celbody/Vsop87/: CMakeLists.txt  Vsop87.cpp  Vsop87.h
Src/DlgCtrl/: CMakeLists.txt  DlgCtrl.cpp  DlgCtrlPropertyList.cpp
Src/Plugin/: CMakeLists.txt
Src/Plugin/ExtMFD/: CMakeLists.txt  ExtMFD.cpp  MFDWindow.cpp  MFDWindow.h
Src/Plugin/FlightData/: CMakeLists.txt  FDGraph.cpp  FDGraph.h  FlightData.cpp
Src/Plugin/Framerate/: CMakeLists.txt  Framerate.cpp  Framerate.rc
Src/Plugin/LuaConsole/: CMakeLists.txt  ConsoleCfg.h  LuaConsole.cpp  LuaConsole.h  LuaConsole.rc
Src/Plugin/LuaMFD/: CMakeLists.txt  LuaMFD.cpp
Src/Plugin/Meshdebug/: CMakeLists.txt  Meshdebug.cpp
Src/Plugin/Rcontrol/: CMakeLists.txt  Rcontrol.cpp  Rcontrol.rc
Src/Plugin/ScnEditor/: CMakeLists.txt  Editor.cpp  Editor.h  ScnEditor.cpp  ScnEditor.rc  ScnEditorAPI.h
Src/Plugin/ScriptMFD/: CMakeLists.txt  ScriptMFD.cpp  ScriptMFD.h
Src/Plugin/TrackIR/: CMakeLists.txt  TrackIR.cpp  TrackIR.h  TrackIRconfig.h
Src/Plugin/TransX/: BodyCache.h  BodyProvider.h  CMakeLists.txt  TransX.rc  TransXFunction.cpp  basefunction.cpp  globals.cpp  graph.cpp  intercept.cpp  mapfunction.cpp  mfd.h  mfdfunction.cpp  mfdvarhandler.cpp  mfdvariable.cpp  mfdvartypes.cpp  orbitelements.cpp  orbitelements.h  planfunction.cpp  shiplist.cpp  transx.cpp  transx.h  transxstate.cpp  viewstate.cpp
Src/SpaceXpanse/: Astro.h  Base.cpp  Baseobj.cpp  Body.cpp  Body.h  BodyIntegrator.cpp  CMakeLists.txt  CSphereMgr.cpp  Camera.cpp  Camera.h  Celbody.cpp  Celbody.h  Config.cpp  Config.h  D3d7util.h  Defpanel.cpp  Defpanel.h  DialogWin.cpp  Dialogs.cpp  Disclaimer.txt.in  DlgCamera.cpp  DlgCapture.cpp  DlgFocus.cpp  DlgFunction.cpp  DlgHelp.cpp  DlgInfo.cpp  DlgMap.cpp  DlgMenuCfg.cpp  DlgMgr.cpp  DlgMgr.h  DlgRecorder.cpp  DlgTacc.cpp  DlgVishelper.cpp  Element.cpp  Element.h  ExtraRender.h  FlightRecorder.cpp  GraphicsAPI.cpp  Help.cpp  Input.cpp  (+101 more)
Src/SpaceXpanse_ng/: CMakeLists.txt  SpaceXpanse_ng.cpp  SpaceXpanse_ng.rc  resource.h
Src/SpaceXpansesdk/: CMakeLists.txt  SpaceXpansesdk.cpp
Src/Vessel/: CMakeLists.txt
Src/Vessel/Atlantis/: CMakeLists.txt  Common.cpp
Src/Vessel/Carina/: CMakeLists.txt
Src/Vessel/Common/: Instrument.cpp  Instrument.h
Src/Vessel/DeltaGlider/: AAPSubsys.cpp  AAPSubsys.h  AerodynSubsys.cpp  AerodynSubsys.h  AirlockSwitch.cpp  AirlockSwitch.h  AvionicsSubsys.cpp  AvionicsSubsys.h  CMakeLists.txt  DGSubsys.cpp  DGSubsys.h  DGSwitches.cpp  DGSwitches.h  DeltaGlider.cpp  DeltaGlider.h  DeltaGlider.rc  DockingSubsys.cpp  DockingSubsys.h  FailureSubsys.cpp  FailureSubsys.h  FuelMfd.cpp  FuelMfd.h  GearSubsys.cpp  GearSubsys.h  Horizon.cpp  Horizon.h  HoverSubsys.cpp  HoverSubsys.h  HudCtrl.cpp  HudCtrl.h  InstrAoa.cpp  InstrAoa.h  InstrHsi.cpp  InstrHsi.h  InstrVs.cpp  InstrVs.h  LightSubsys.cpp  LightSubsys.h  MainRetroSubsys.cpp  MainRetroSubsys.h  (+12 more)
Tests/: CMakeLists.txt  README.md
Utils/meshc/: CMakeLists.txt  meshc.cpp
Utils/texpack/: CMakeLists.txt  texpack.cpp
(+666 files in other folders)
